Реализация Security Guard Agent, Compliance Agent, Resource Allocator Agent.